--- a/HTML - Personal Site/style.css
+++ b/HTML - Personal Site/style.css
@@ -1,4 +1,43 @@
 th,
 td {
-    padding: 10px;
+    padding: 15px;
+}
+
+td.Details {
+    text-align: center;
+}
+
+head {}
+
+body {
+    text-align: center;
+}
+
+footer {
+    margin-top: 10px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+/* Webkit Designs */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
