form.html page is designed as "Contact Us" page and the link is added to every pages.

--- a/HTML - Personal Site/styles.css
+++ b/HTML - Personal Site/styles.css
@@ -49,3 +49,13 @@ li.Footer {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+input#textarea {
+    width: auto;
+    height: 169px;
+    margin-left: 14px;
+}
+
+form {
+    float: center;
+}
