--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Staatliches';
+    src: url(fonts/Staatliches-Regular.ttf) format('truetype');
+}
+
 th,
 td {
     padding: 15px;
@@ -9,6 +14,17 @@ td.Details {
 
 body {
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p {
+    text-align: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p.form-text {
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 footer {
@@ -56,4 +72,8 @@ input#textarea {
 
 form {
     float: center;
+}
+
+h1 {
+    font-family: 'Staatliches';
 }
