--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
+html {
+  font-size: 62.5%;
+  margin-left: 3rem;
+  margin-top: 3rem;
+}
 body {
-    background-color: #4b494960;
+  background-color: #4b494960;
+  font-size: 1.8rem;
 }
 
 .content {
-    max-width: 500px;
-    margin: auto;
-    background-color: #ffffff;
-    padding: 20px;
+  max-width: 500px;
+  margin: auto;
+  background-color: #ffffff;
+  padding: 20px;
+}
+
+.hero-image {
+  width: 50rem;
+  height: 50rem;
+  object-fit: cover;
+  border-radius: 2rem;
+  border: 2px solid dodgerblue;
 }
